syntax = "proto3";

package fadovn_store;

message Zone {
  int32 id = 1;
  int32 zipcode = 2;
  repeated ZoneData data = 3;
  repeated ZoneData exception_data = 4;
  EnumZone.ZonePartner zone_type = 5;
  int32 createdDate = 6;
  int32 updatedDate = 7;
  bool isDeleted = 8;
}

message ZoneData {
  int32 zipcode_from = 1;
  int32 zipcode_to = 2;
  string zone = 3;
}

message EnumZone {
  enum ZonePartner {
    OTHER_ZONE_PARTNER = 0;
    USPS_PARTNER = 1;
    UPS_PARTNER = 2;
  } 
}