syntax = "proto3";

package fadovn_store;
import "zone/zone.proto";

message ZoneReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  optional Zone payload = 4;
}

message ZoneListDataReply {
  repeated Zone zone_list = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message ZoneListReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  ZoneListDataReply payload = 4;
}

